--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ skills: "Web Developer - Graphic Artist - User Experience Designer"
 meta_author: LastName FirstName
 
 # Google webmaster tools
-google_verify:
+google_verify: jOXsywy9ntII0FgZV_-RPh3rV8ITYiJiB7mdsHm8Zis
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
